// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<ul>
  <MockElement
    item={
      Object {
        "label": "Item 1",
        "value": "1",
      }
    }
    key="1"
    removable={false}
    styles={
      Object {
        "borderRadius": ".2em",
        "checkRadio": Object {
          "borderWidth": "2px",
          "labelMargin": ".2em",
          "marginBetween": "1em",
          "paddingBottom": ".2em",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": ".2em",
        },
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "#C3C3C3",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "fontSize": "1em",
        "hasOptions": true,
        "hasSelection": false,
        "icon": Object {
          "width": "1em",
        },
        "multiple": false,
        "option": Object {
          "paddingBottom": ".25em",
          "paddingLeft": ".25em",
          "paddingRight": ".25em",
          "paddingTop": ".25em",
        },
        "optionHighlighted": Array [],
        "paddingBottom": ".25em",
        "paddingLeft": ".25em",
        "paddingRight": ".25em",
        "paddingTop": ".25em",
        "rightToLeft": false,
        "search": Object {
          "width": "10em",
        },
        "selection": Object {
          "paddingBottom": "0",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": "0",
        },
        "width": "600px",
      }
    }
  />
  <MockElement
    item={
      Object {
        "label": "Item 2",
        "value": "2",
      }
    }
    key="2"
    removable={false}
    styles={
      Object {
        "borderRadius": ".2em",
        "checkRadio": Object {
          "borderWidth": "2px",
          "labelMargin": ".2em",
          "marginBetween": "1em",
          "paddingBottom": ".2em",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": ".2em",
        },
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "#C3C3C3",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "fontSize": "1em",
        "hasOptions": true,
        "hasSelection": false,
        "icon": Object {
          "width": "1em",
        },
        "multiple": false,
        "option": Object {
          "paddingBottom": ".25em",
          "paddingLeft": ".25em",
          "paddingRight": ".25em",
          "paddingTop": ".25em",
        },
        "optionHighlighted": Array [],
        "paddingBottom": ".25em",
        "paddingLeft": ".25em",
        "paddingRight": ".25em",
        "paddingTop": ".25em",
        "rightToLeft": false,
        "search": Object {
          "width": "10em",
        },
        "selection": Object {
          "paddingBottom": "0",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": "0",
        },
        "width": "600px",
      }
    }
  />
  <MockElement
    item={
      Object {
        "label": "Item 3",
        "value": "3",
      }
    }
    key="3"
    removable={false}
    styles={
      Object {
        "borderRadius": ".2em",
        "checkRadio": Object {
          "borderWidth": "2px",
          "labelMargin": ".2em",
          "marginBetween": "1em",
          "paddingBottom": ".2em",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": ".2em",
        },
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "#C3C3C3",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "fontSize": "1em",
        "hasOptions": true,
        "hasSelection": false,
        "icon": Object {
          "width": "1em",
        },
        "multiple": false,
        "option": Object {
          "paddingBottom": ".25em",
          "paddingLeft": ".25em",
          "paddingRight": ".25em",
          "paddingTop": ".25em",
        },
        "optionHighlighted": Array [],
        "paddingBottom": ".25em",
        "paddingLeft": ".25em",
        "paddingRight": ".25em",
        "paddingTop": ".25em",
        "rightToLeft": false,
        "search": Object {
          "width": "10em",
        },
        "selection": Object {
          "paddingBottom": "0",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": "0",
        },
        "width": "600px",
      }
    }
  />
  <MockElement
    item={
      Object {
        "label": "Item 4",
        "value": "4",
      }
    }
    key="4"
    removable={false}
    styles={
      Object {
        "borderRadius": ".2em",
        "checkRadio": Object {
          "borderWidth": "2px",
          "labelMargin": ".2em",
          "marginBetween": "1em",
          "paddingBottom": ".2em",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": ".2em",
        },
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "#C3C3C3",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "fontSize": "1em",
        "hasOptions": true,
        "hasSelection": false,
        "icon": Object {
          "width": "1em",
        },
        "multiple": false,
        "option": Object {
          "paddingBottom": ".25em",
          "paddingLeft": ".25em",
          "paddingRight": ".25em",
          "paddingTop": ".25em",
        },
        "optionHighlighted": Array [],
        "paddingBottom": ".25em",
        "paddingLeft": ".25em",
        "paddingRight": ".25em",
        "paddingTop": ".25em",
        "rightToLeft": false,
        "search": Object {
          "width": "10em",
        },
        "selection": Object {
          "paddingBottom": "0",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": "0",
        },
        "width": "600px",
      }
    }
  />
  <MockElement
    item={
      Object {
        "label": "Item 5",
        "value": "5",
      }
    }
    key="5"
    removable={false}
    styles={
      Object {
        "borderRadius": ".2em",
        "checkRadio": Object {
          "borderWidth": "2px",
          "labelMargin": ".2em",
          "marginBetween": "1em",
          "paddingBottom": ".2em",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": ".2em",
        },
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "#C3C3C3",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "fontSize": "1em",
        "hasOptions": true,
        "hasSelection": false,
        "icon": Object {
          "width": "1em",
        },
        "multiple": false,
        "option": Object {
          "paddingBottom": ".25em",
          "paddingLeft": ".25em",
          "paddingRight": ".25em",
          "paddingTop": ".25em",
        },
        "optionHighlighted": Array [],
        "paddingBottom": ".25em",
        "paddingLeft": ".25em",
        "paddingRight": ".25em",
        "paddingTop": ".25em",
        "rightToLeft": false,
        "search": Object {
          "width": "10em",
        },
        "selection": Object {
          "paddingBottom": "0",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": "0",
        },
        "width": "600px",
      }
    }
  />
</ul>
`;

exports[`renders no items 1`] = `
<ul
  onMouseDown={[Function]}
  onMouseOver={[Function]}
>
  <MockElement
    item={
      Object {
        "label": "None",
        "value": "",
      }
    }
    removable={false}
    styles={
      Object {
        "borderRadius": ".2em",
        "checkRadio": Object {
          "borderWidth": "2px",
          "labelMargin": ".2em",
          "marginBetween": "1em",
          "paddingBottom": ".2em",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": ".2em",
        },
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "#C3C3C3",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "fontSize": "1em",
        "hasOptions": true,
        "hasSelection": false,
        "icon": Object {
          "width": "1em",
        },
        "multiple": false,
        "option": Object {
          "paddingBottom": ".25em",
          "paddingLeft": ".25em",
          "paddingRight": ".25em",
          "paddingTop": ".25em",
        },
        "optionHighlighted": Array [],
        "paddingBottom": ".25em",
        "paddingLeft": ".25em",
        "paddingRight": ".25em",
        "paddingTop": ".25em",
        "rightToLeft": false,
        "search": Object {
          "width": "10em",
        },
        "selection": Object {
          "paddingBottom": "0",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": "0",
        },
        "width": "600px",
      }
    }
  />
</ul>
`;

exports[`renders removable 1`] = `
<ul>
  <MockElement
    item={
      Object {
        "label": "Item 1",
        "value": "1",
      }
    }
    key="1"
    removable={true}
    styles={
      Object {
        "borderRadius": ".2em",
        "checkRadio": Object {
          "borderWidth": "2px",
          "labelMargin": ".2em",
          "marginBetween": "1em",
          "paddingBottom": ".2em",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": ".2em",
        },
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "#C3C3C3",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "fontSize": "1em",
        "hasOptions": true,
        "hasSelection": false,
        "icon": Object {
          "width": "1em",
        },
        "multiple": false,
        "option": Object {
          "paddingBottom": ".25em",
          "paddingLeft": ".25em",
          "paddingRight": ".25em",
          "paddingTop": ".25em",
        },
        "optionHighlighted": Array [],
        "paddingBottom": ".25em",
        "paddingLeft": ".25em",
        "paddingRight": ".25em",
        "paddingTop": ".25em",
        "rightToLeft": false,
        "search": Object {
          "width": "10em",
        },
        "selection": Object {
          "paddingBottom": "0",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": "0",
        },
        "width": "600px",
      }
    }
  />
  <MockElement
    item={
      Object {
        "label": "Item 2",
        "value": "2",
      }
    }
    key="2"
    removable={true}
    styles={
      Object {
        "borderRadius": ".2em",
        "checkRadio": Object {
          "borderWidth": "2px",
          "labelMargin": ".2em",
          "marginBetween": "1em",
          "paddingBottom": ".2em",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": ".2em",
        },
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "#C3C3C3",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "fontSize": "1em",
        "hasOptions": true,
        "hasSelection": false,
        "icon": Object {
          "width": "1em",
        },
        "multiple": false,
        "option": Object {
          "paddingBottom": ".25em",
          "paddingLeft": ".25em",
          "paddingRight": ".25em",
          "paddingTop": ".25em",
        },
        "optionHighlighted": Array [],
        "paddingBottom": ".25em",
        "paddingLeft": ".25em",
        "paddingRight": ".25em",
        "paddingTop": ".25em",
        "rightToLeft": false,
        "search": Object {
          "width": "10em",
        },
        "selection": Object {
          "paddingBottom": "0",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": "0",
        },
        "width": "600px",
      }
    }
  />
  <MockElement
    item={
      Object {
        "label": "Item 3",
        "value": "3",
      }
    }
    key="3"
    removable={true}
    styles={
      Object {
        "borderRadius": ".2em",
        "checkRadio": Object {
          "borderWidth": "2px",
          "labelMargin": ".2em",
          "marginBetween": "1em",
          "paddingBottom": ".2em",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": ".2em",
        },
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "#C3C3C3",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "fontSize": "1em",
        "hasOptions": true,
        "hasSelection": false,
        "icon": Object {
          "width": "1em",
        },
        "multiple": false,
        "option": Object {
          "paddingBottom": ".25em",
          "paddingLeft": ".25em",
          "paddingRight": ".25em",
          "paddingTop": ".25em",
        },
        "optionHighlighted": Array [],
        "paddingBottom": ".25em",
        "paddingLeft": ".25em",
        "paddingRight": ".25em",
        "paddingTop": ".25em",
        "rightToLeft": false,
        "search": Object {
          "width": "10em",
        },
        "selection": Object {
          "paddingBottom": "0",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": "0",
        },
        "width": "600px",
      }
    }
  />
  <MockElement
    item={
      Object {
        "label": "Item 4",
        "value": "4",
      }
    }
    key="4"
    removable={true}
    styles={
      Object {
        "borderRadius": ".2em",
        "checkRadio": Object {
          "borderWidth": "2px",
          "labelMargin": ".2em",
          "marginBetween": "1em",
          "paddingBottom": ".2em",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": ".2em",
        },
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "#C3C3C3",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "fontSize": "1em",
        "hasOptions": true,
        "hasSelection": false,
        "icon": Object {
          "width": "1em",
        },
        "multiple": false,
        "option": Object {
          "paddingBottom": ".25em",
          "paddingLeft": ".25em",
          "paddingRight": ".25em",
          "paddingTop": ".25em",
        },
        "optionHighlighted": Array [],
        "paddingBottom": ".25em",
        "paddingLeft": ".25em",
        "paddingRight": ".25em",
        "paddingTop": ".25em",
        "rightToLeft": false,
        "search": Object {
          "width": "10em",
        },
        "selection": Object {
          "paddingBottom": "0",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": "0",
        },
        "width": "600px",
      }
    }
  />
  <MockElement
    item={
      Object {
        "label": "Item 5",
        "value": "5",
      }
    }
    key="5"
    removable={true}
    styles={
      Object {
        "borderRadius": ".2em",
        "checkRadio": Object {
          "borderWidth": "2px",
          "labelMargin": ".2em",
          "marginBetween": "1em",
          "paddingBottom": ".2em",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": ".2em",
        },
        "colors": Object {
          "background": "white",
          "disabled": "#ECECEC",
          "highlight": "lightblue",
          "primary": "black",
          "secondary": "#C3C3C3",
          "warning": "#CD5C5C",
        },
        "disabled": false,
        "fontSize": "1em",
        "hasOptions": true,
        "hasSelection": false,
        "icon": Object {
          "width": "1em",
        },
        "multiple": false,
        "option": Object {
          "paddingBottom": ".25em",
          "paddingLeft": ".25em",
          "paddingRight": ".25em",
          "paddingTop": ".25em",
        },
        "optionHighlighted": Array [],
        "paddingBottom": ".25em",
        "paddingLeft": ".25em",
        "paddingRight": ".25em",
        "paddingTop": ".25em",
        "rightToLeft": false,
        "search": Object {
          "width": "10em",
        },
        "selection": Object {
          "paddingBottom": "0",
          "paddingLeft": ".2em",
          "paddingRight": ".2em",
          "paddingTop": "0",
        },
        "width": "600px",
      }
    }
  />
</ul>
`;
